--- a/app/src/main/res/drawable/edittext.xml
+++ b/app/src/main/res/drawable/edittext.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:left="-3dp" android:right="-3dp" android:buttom="-1dp" android:top="-3dp">\
+    <item android:left="-3dp" android:right="-3dp" android:bottom="-1dp" android:top="-3dp">
         <shape>
-        <stroke android:width="2dp" android:color="756c6c"/>
+        <stroke android:width="2dp" android:color="#756c6c"/>
         </shape>
     </item>
 </layer-list>
