--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.LearningApp" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your light theme here. -->
+        <item name="colorPrimary">@color/blue</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
