update file baru

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#9DAF89</color>
     <color name="button">#9C27B0</color>
+    <color name="jingga">#544141</color>
 </resources>
