update file baru

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="gray">#9DAF89</color>
     <color name="button">#9C27B0</color>
     <color name="jingga">#544141</color>
+    <color name="viva">#3C3E47</color>
+    <color name="viva2">#0A0E1F</color>
 </resources>
