update file baru

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/gray"
     android:id="@+id/labu"
-    tools:context=".MainActivity">
+    tools:context=".assets.MainActivity">
 
     <ImageView
         android:id="@+id/lala"
