--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:id="@+id/backgroud"
     android:layout_height="match_parent"
-    tools:context=".login">
+    tools:context=".assets.login">
 
     <ImageView
         android:id="@+id/dadan"
